--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "5.0.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^3.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
