--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^3.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
